fixed double scroll bar issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 html, body {
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 img.bg {
@@ -163,6 +162,7 @@ a:hover {
   }
   .picture {
     margin-top: 40px;
+    margin-left: 50%;
   }
 }
 @media only screen and (min-width: 400px) and (max-width: 600px) {
@@ -180,10 +180,16 @@ a:hover {
   }
 
   .picture {
-    margin-top: 40px;
+    margin-top: 10px;
   }
-  .contactMe {
-    height: 90vh;
+}
+
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+  .contactOptions {
+    margin-top: 15px;
+  }
+  .picture {
+    margin-top: 25px;
   }
 }
 
